--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,35 @@
 version: "3"
 services:
-  sss:
+  serverstatus:
     image: cppla/serverstatus:latest
-    container_name: sss
+    container_name: serverstatus
     restart: unless-stopped
-    volumes:
-      - ./config.json:/ServerStatus/server/config.json 
-      - ./json:/usr/share/nginx/html/json
     ports:
+      # - 35600:80
       - 35601:35601
-      - 8081:80 
-  bot:
+    expose:
+      - 80
+      # - 35601
+    volumes:
+      - ./config.json:/ServerStatus/server/config.json
+      - ./ServerStatus/web/:/usr/share/nginx/html/
+      - ./json:/usr/share/nginx/html/json
+    networks:
+      my:
+        ipv4_address: 172.18.0.12
+
+  serverstatus_bot:
     build:
       context: .
-    container_name: bot4sss
+    container_name: serverstatus_bot
     restart: unless-stopped
     environment:
       - TG_CHAT_ID=tg_chat_id
       - TG_BOT_TOKEN=tg_bot_token
+    networks:
+      my:
+        ipv4_address: 172.18.0.32
+    
+networks:
+  my:
+    external: true
